--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,8 +22,97 @@
   
   }
   
-  
-  
+    /*desarrollo galeria de tendencias*/
+
+  .Galeria{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 200px 200px 200px;
+    padding: 15px;
+    grid-gap: 10px;
+}
+
+.item{
+    
+    border: 2px solid white;
+    border-radius: 10px;
+    filter: grayscale(100%);
+    background-position: center;
+}
+
+.item:hover{
+    transform: scale(1.5);
+    transition: all 0.8s;
+}
+
+.item1{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    background-image: url(../multimedia/moda6.jpg);
+    background-size: cover;
+}
+
+.item2{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-image: url(../multimedia/textil1.jpg);
+    background-size: cover;
+}
+
+.item3{
+    grid-column: 3/5;
+    grid-row: 1/2;
+    background-image: url(../multimedia/tipos-de-moda.jpg);
+    background-size: cover;
+}
+
+.item4{
+    grid-column: 2/3;
+    grid-row: 2/4;
+    background-image: url(../multimedia/moda9.jpg);
+    background-size: cover;
+
+}
+
+.item5{
+    grid-column: 3/4;
+    grid-row: 2/3;
+    background-image: url(../multimedia/textil2.jpg);
+    background-size: cover;
+}
+
+.item6{
+    grid-column: 4/5;
+    grid-row: 2/3;
+    background-image: url(../multimedia/moda2.jpg);
+    background-size: cover;
+
+}
+
+.item7{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-image: url(../multimedia/accesorio1.jpg);
+    background-size: cover;
+}
+
+.item8{
+    grid-column: 3/5;
+    grid-row: 3/4;
+    background-image: url(../multimedia/nosotros.jpg);
+    background-size: cover;
+}
+
+@media only screen and (min-width: 320px){
+    .galeria{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
+
+/*desarrollo galeria de tendencias*/
   
   .form-login {
       width: 400px;
