--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,6 +21,122 @@
       text-transform: capitalize;
   
   }
+
+   /*desarrollo formulario de contacto*/
+
+   body {
+    background: #181818;
+    color: #fff;
+    line-height: 1.6;
+    font-family: 'Quicksand', sans-serif;
+    padding: 0 1.5em;
+}
+
+.container {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.logo {
+    text-align: center;
+    font-size: 2em;
+}
+
+.logo span {
+    color: #B70E21;
+}
+
+.contact-wrapper {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
+}
+
+.contact-wrapper > * {
+    padding: 1em;
+}
+
+.contact-form {
+    background: #222222;
+}
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form label {
+    display: block;
+}
+
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
+}
+
+.contact-form form .block {
+    grid-column: 1 / 3;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: 0;
+    color: #fff;
+    border-bottom: 1px solid pink;
+}
+
+.contact-form form button {
+    background: pink;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: #d63031;
+    color: black;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+/* CONTACT INFO */
+.contact-info {
+    background: #000;
+}
+
+.contact-info h4, .contact-info ul, .contact-info p {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+/* LARGE SIZE */
+@media(min-width: 700px) {
+    body {
+        padding: 0 4em;
+    }
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .contact-wrapper > * {
+        padding: 2em;
+    }
+   
+
+
+   /*desarrollo formulario de contacto*/
+  
   
     /*desarrollo galeria de tendencias*/
 
@@ -180,6 +296,11 @@
 .polaroid-card:hover{
    transform: scale(1.25);
 
+}
+
+.polaroid-gallery__title{
+    text-align: center;
+    font-size: 25px;
 }
 
 /*agregado transformaciones CSS Polaroid*/
@@ -360,46 +481,50 @@
        color: ;   
    }
   
+   /* desarrollo de botones nav*/
+  
    .btn{
-      font-family:'Times New Roman', Times, serif
-      font-size: 30px;
-      background: #424242;
-      color:white;
-      padding: 10px 15px 10px 15px;
-      text-decoration: none;
-      border-radius: 5px;   
+    font-family:'Times New Roman', Times, serif
+    font-size: 30px;
+    background: #424242;
+    color:white;
+    padding: 10px 15px 10px 15px;
+    text-decoration: none;
+    border-radius: 5px;   
+
+ }
+
+ .btn:hover{
+    background: white;
+    color: black
+
+}
+
+
+ul{
+    float: right;
+}
+
+
+ul li{
+    display:inline-block;
+
+}
+
+nav ul li a{
+    background: #424242;
+    text-decoration: none;
+    color: white;
+    padding: 12px;
+    border-radius: 5px;  
+   
+}
+
+nav ul li a:hover{
+    color:black
+}
   
-   }
-  
-   .btn:hover{
-      background: white;
-      color: black
-  
-  }
-  
-  ul{
-      float: right;
-  }
-  
-  
-  ul li{
-      display:inline-block;
-  
-  }
-  
-  nav ul li a{
-      background: #424242;
-      text-decoration: none;
-      color: white;
-      padding: 12px;
-      border-radius: 5px;  
-     
-  }
-  
-  nav ul li a:hover{
-      color:black
-  }
-  
+  /*fin desarrollo de botones nav*/
   section{
       width: 80%;
       margin: 0 auto;
