desarrollo formulario contacto con SCSS

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,14 +4,23 @@
     box-sizing: border-box;
   }
  
+
+  
   header{
       background: black;
       border: 300px;
       margin: 0%;
-      height: 100%;
-      
+      height: 100%;   
   }
 
+    /*espacio barra nav*/
+
+  .navbar-nav > li{
+    padding-left:3px;
+    padding-right:3px;
+  }
+  
+/*espacio barra nav*/
     
   h3{
       text-align: center;
